--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+    <title>Joshua Fullmer</title>
+    <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
 </head>
 <body>
-    <h1>Joshua</h1>
+    <div class="content">
+        <header>
+            <h1>Joshua Fullmer</h1>
+        </header>
+        <main>
+            <h2>CIT 230: Assignment Portal</h2>
+            <hr>
+            <img src="#" alt="Joshua Fullmer and his wife">
+            <ul>
+                <li>Lesson 02: <a href="#">Assignment Link</a></li>
+                <li>Lesson 03: <a href="#">Assignment Link</a></li>
+                <li>Lesson 04: <a href="#">Assignment Link</a></li>
+            </ul>
+        </main>
+        <footer>
+            <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
+                <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+            </p>
+            <p>Last updated: 04/25/2020</p>
+        </footer>
+    </div>
 </body>
+
 </html>
