--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <h2>CIT 230: Assignment Portal</h2>
             <hr>
-            <img src="Emilee&Josh-6cropped.jpg" alt="Joshua Fullmer and his wife">
+            <img src="images/Emilee&Josh-6cropped.jpg" alt="Joshua Fullmer and his wife">
             <ul>
                 <li>Lesson 02: <a href="#">Assignment Link</a></li>
                 <li>Lesson 03: <a href="#">Assignment Link</a></li>
