--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="content">
         <header>
             <h1>Joshua Fullmer</h1>
+            <img src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife">
         </header>
         <main>
             <h2>CIT 230: Assignment Portal</h2>
             <hr>
-            <img src="Emilee&Josh-6cropped.jpg" alt="Joshua Fullmer and his wife">
             <ul>
                 <li>Lesson 02: <a href="#">Assignment Link</a></li>
                 <li>Lesson 03: <a href="#">Assignment Link</a></li>
