--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <header>
             <h1>Joshua Fullmer</h1>
-            <img src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife">
+            <img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife">
         </header>
         <main>
             <h2>CIT 230: Assignment Portal</h2>
