--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="content">
         <header>
-            <h1>Joshua Fullmer</h1>
-            <img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife">
+            <h1>Joshua Fullmer<img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife"></h1>
         </header>
         <main>
             <h2>CIT 230: Assignment Portal</h2>
@@ -26,7 +25,7 @@
             <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
                 <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             </p>
-            <p>Last updated: 04/25/2020</p>
+            <p class="update">Last updated: 04/25/2020</p>
         </footer>
     </div>
 </body>
