--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
                 <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             </p>
-            <p class="update">Last updated: 04/25/2020</p>
+            <p id="update">Last updated: <div id="update"></p>
         </footer>
+        <script>
+            document.getElementById('update').innerHTML = document.lastModified;
+        </script>
     </div>
 </body>
 
