--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
                 <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             </p>
-            <p>Last updated: <div id="update"></div></p>
+            <p>Last updated: <span id="update"></span></p>
         </footer>
         <script>
             document.getElementById('update').innerHTML = document.lastModified;
