--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>Joshua Fullmer</title>
     <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
 </head>
