--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h2>CIT 230: Assignment Portal</h2>
             <hr>
             <ul>
-                <li>Lesson 02: <a href="#">Assignment Link</a></li>
+                <li>Lesson 02: <a href="lesson2/design-principles.html">Assignment Link</a></li>
                 <li>Lesson 03: <a href="#">Assignment Link</a></li>
                 <li>Lesson 04: <a href="#">Assignment Link</a></li>
             </ul>
-        </main>
+        </main> 
         <footer>
             <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
                 <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
