finished lesson2 html

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -29,10 +29,10 @@
                 <p>Twitter's moblie site is a great example of the <b>Law of Proximity</b>. Different tweats are seperated with alternating white and grey backgrounds that help group information. </p>
             </section>
             <section>
-                <h2>xxxxxxxxx</h2>
+                <h2>White Space</h2>
                 <h3>Electronic Arts</h3>
                 <img src="moblescreenshot.png" alt="screenshot of electronic arts website on moblie">
-                
+                <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines. White space also helps separate the different articles.</p>
             </section>
         </main>
         <footer>
