--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -13,7 +13,7 @@
 <body>
     <div class="content">
         <header>
-            <h1>Design Principles<img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife"></h1>
+            <h1>Design Principles</h1>
         </header>
         <main> 
             <section>
