--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,30 +11,36 @@
     <title>Lesson 2</title>
     <meta name="description" content="Lesson 2 Assignment for Joshua Fullmer's WDD 230 class at BYUI">
 </head>
+
 <body>
     <div class="content">
         <header>
             <h1>Design Principles</h1>
         </header>
-        <main> 
+        <main>
             <section>
                 <h2>Visual Hierarchy</h2>
                 <h3>Dollar Shave Club</h3>
                 <img src="moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
-                <p>This is a good example of <b>Visual Hierarchy </b>. There are lots of things they could have put at the top of their page, but they decided to get to the point and made the page very simple. The biggest button is bright orange and grabs the users attention right away.</p>
+                <p>This is a good example of <b>Visual Hierarchy </b>. There are lots of things they could have put at
+                    the top of their page, but they decided to get to the point and made the page very simple. The
+                    biggest button is bright orange and grabs the users attention right away.</p>
+            </section>
+                <h2>White Space</h2>
+                <h3>Electronic Arts</h3>
+                <img src="moblescreenshot.png" alt="screenshot of electronic arts website on moblie">
+                <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines.
+                White space also helps separate the different articles.</p>
             </section>
             <section>
                 <h2>Law of Proximity</h2>
                 <h3>Twitter</h3>
                 <img src="moblescreenshot1.png" alt="screenshot of twitter website on moblie">
-                <p>Twitter's moblie site is a great example of the <b>Law of Proximity</b>. Different tweats are seperated with alternating white and grey backgrounds that help group information. </p>
+                <p>Twitter's moblie site is a great example of the <b>Law of Proximity</b>. Different tweats are
+                    seperated with alternating white and grey backgrounds that help group information. </p>
             </section>
             <section>
-                <h2>White Space</h2>
-                <h3>Electronic Arts</h3>
-                <img src="moblescreenshot.png" alt="screenshot of electronic arts website on moblie">
-                <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines. White space also helps separate the different articles.</p>
-            </section>
+
         </main>
         <footer>
             <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
