--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -18,7 +18,7 @@
             <h1>Design Principles</h1>
         </header>
         <main>
-            <section>
+            <section class="lesspadding">
                 <h2>Visual Hierarchy</h2>
                 <h3>Dollar Shave Club</h3>
                 <img src="moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
@@ -32,7 +32,7 @@
                 <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines.
                 White space also helps separate the different articles.</p>
             </section>
-            <section>
+            <section class="lesspadding">
                 <h2>Law of Proximity</h2>
                 <h3>Twitter</h3>
                 <img src="moblescreenshot1.png" alt="screenshot of twitter website on moblie">
