--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -18,7 +18,7 @@
             <h1>Design Principles</h1>
         </header>
         <main>
-            <section class="lesspadding">
+            <section>
                 <h2>Visual Hierarchy</h2>
                 <h3>Dollar Shave Club</h3>
                 <img src="moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
@@ -27,13 +27,13 @@
                     biggest button is bright orange and grabs the users attention right away.</p>
             </section>
             <section>
-                <h2>White Space</h2>
+                <h2 class="ea">White Space</h2>
                 <h3>Electronic Arts</h3>
-                <img src="moblescreenshot.png" alt="screenshot of electronic arts website on moblie">
+                <img src="moblescreenshot2.png" alt="screenshot of electronic arts website on moblie">
                 <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines.
                 White space also helps separate the different articles.</p>
             </section>
-            <section class="lesspadding">
+            <section>
                 <h2>Law of Proximity</h2>
                 <h3>Twitter</h3>
                 <img src="moblescreenshot1.png" alt="screenshot of twitter website on moblie">
