--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -16,14 +16,14 @@
     <div class="content">
         <header>
             <h1>Design Principles</h1>
+            <h3>Lesson 2</h3>
         </header>
         <main>
             <section>
                 <h2>Visual Hierarchy</h2>
                 <h3>Dollar Shave Club</h3>
                 <img src="moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
-                <p>This is a good example of <b>Visual Hierarchy </b>. There are lots of things they could have put at
-                    the top of their page, but they decided to get to the point and made the page very simple. The
+                <p>This is a good example of <b>Visual Hierarchy </b>. The page is simplified for moblie and the
                     biggest button is bright orange and grabs the users attention right away.</p>
             </section>
             <section>
