--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Joshua Fullmer</title>
+    <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="medium.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-    <title>Joshua Fullmer</title>
-    <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
+    
 </head>
 <body>
     <div class="content">
         <header>
-            <h1>Joshua Fullmer<img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife"></h1>
+            <img id="indexpicture" src="images/emileejoshcropped.jpg" alt="Joshua Fullmer and his wife">
+            <h1>Joshua Fullmer</h1>
         </header>
         <main>
             <h2>CIT 230: Assignment Portal</h2>
