--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lesson 2</title>
     <meta name="description" content="Lesson 2 Assignment for Joshua Fullmer's WDD 230 class at BYUI">
-    <link rel="stylesheet" href="lesson2.css">
+    <link rel="stylesheet" href="large.css">
     <link rel="stylesheet" href="medium.css">
+    <link rel="stylesheet" href="small.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 
 </head>
