--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,21 +22,21 @@
             <section>
                 <h2>Visual Hierarchy</h2>
                 <h3>Dollar Shave Club</h3>
-                <img src="moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
+                <img src="images/moblescreenshot.png" alt="screenshot of dollar shave club website on moblie">
                 <p>This is a good example of <b>Visual Hierarchy </b>. The page is simplified for moblie and the
                     biggest button is bright orange and grabs the users attention right away.</p>
             </section>
             <section>
                 <h2 class="ea">White Space</h2>
                 <h3>Electronic Arts</h3>
-                <img src="moblescreenshot2.png" alt="screenshot of electronic arts website on moblie">
+                <img src="images/moblescreenshot2.png" alt="screenshot of electronic arts website on moblie">
                 <p>The use of <b>White Space</b> on EA's site helps draw the user's attention to the article headlines.
                 White space also helps separate the different articles.</p>
             </section>
             <section>
                 <h2>Law of Proximity</h2>
                 <h3>Twitter</h3>
-                <img src="moblescreenshot1.png" alt="screenshot of twitter website on moblie">
+                <img src="images/moblescreenshot1.png" alt="screenshot of twitter website on moblie">
                 <p>Twitter's moblie site is a great example of the <b>Law of Proximity</b>. Different tweats are
                     seperated with alternating white and grey backgrounds that help group information.</p>
             </section>
