--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="large.css">
     <link rel="stylesheet" href="medium.css">
     <link rel="stylesheet" href="small.css">
+    <link rel="stylesheet" href="normalize2.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 
 </head>
