--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Site Plan</h1>
+    </header>
+    <main>
+        <div>
+            <h2>Site Name</h2>
+            <p>This site's name will be <b>[site name]</b>, and its domain will be <b>domain</b> which is currently
+                available.</p>
+        </div>
+        <div>
+            <h2>Site Purpose</h2>
+            <p>[this site has purpose]</p>
+        </div>
+        <div>
+            <h2>Logo</h2>
+            <p>[this site has a logo]</p>
+        </div>
+    </main>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
 </body>
+
 </html>
