--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
+    <link rel="stylesheet" href="normalize3.css">
+    <link rel="stylesheet" href="large.css">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
             <h2>Site Purpose</h2>
             <p>[this site has purpose]</p>
         </div>
-        <div>
+        <div> 
             <h2>Logo</h2>
             <p>[this site has a logo]</p>
         </div>
