--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -11,20 +11,22 @@
 
 <body>
     <header>
-        <h1>Site Plan</h1>
+        <h1>Weather Me This</h1>
+        <h2>Site Plan</h2>
     </header>
     <main>
         <div>
             <h2>Site Name</h2>
-            <p>This site's name will be <b>[site name]</b>, and its domain will be <b>domain</b> which is currently
-                available.</p>
+            <p>This site's name will be <b>Weather Me This</b>, and its domain will be <b>weathermethis.com</b> which is currently
+                available. This is an ideal domain because it is short, uses a popular ending (.com), and would only cost $12/year.</p>
         </div>
         <div>
             <h2>Site Purpose</h2>
-            <p>[this site has purpose]</p>
+            <p>This website will be a great place to check the weather. This site will be used as a tool by everyone from individuals who need a quick weather update, to organizations planning events. </p>
         </div>
         <div> 
             <h2>Logo</h2>
+            <img src="weathericon.png" alt="weather icon">
             <p>[this site has a logo]</p>
         </div>
     </main>
