--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,6 +13,7 @@
     <header>
         <h1>Weather Me This</h1>
         <h2>Site Plan</h2>
+        <img class="icon" src="weathericon.png" alt="weather icon">
     </header>
     <main>
         <div>
@@ -27,7 +28,6 @@
         <div> 
             <h2>Logo</h2>
             <img src="weathericon.png" alt="weather icon">
-            <p>[this site has a logo]</p>
         </div>
     </main>
     <nav>
