--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -14,6 +14,14 @@
         <h1>Weather Me This</h1>
         <h2>Site Plan</h2>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
     <main>
         <div>
             <h2>Site Name</h2>
@@ -29,14 +37,16 @@
             <img src="weathericon.png" alt="weather icon">
         </div>
     </main>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="target-audience.html">Target Audience</a></li>
-            <li><a href="color-scheme.html">Color Scheme</a></li>
-            <li><a href="typography.html">Typography</a></li>
-        </ul>
-    </nav>
+    <footer>
+        <p>&copy; 2020 | Joshua K. Fullmer | Idaho |
+            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        </p>
+        <p class="updateline">Last updated: <span id="update"></span></p>
+    </footer>
+    <script>
+        document.getElementById('update').innerHTML = document.lastModified;
+    </script>
+    
 </body>
 
 </html>
