--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan | Target Audience</title>
+    <link rel="stylesheet" href="normalize3.css">
+    <link rel="stylesheet" href="large.css">
 </head>
+
 <body>
+    <header>
+        <h1>Site Plan</h1>
+        <h2>Target Audience</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div>
+            <h2>Site Name</h2>
+            <p>This site's name will be <b>Weather Me This</b>, and its domain will be <b>weathermethis.com</b> which is currently
+                available. This is an ideal domain because it is short, uses a popular ending (.com), and would only cost $12/year.</p>
+        </div>
+        <div>
+            <h2>Site Purpose</h2>
+            <p>This website will be a great place to check the weather. This site will be used as a tool by everyone from individuals who need a quick weather update, to organizations planning events. </p>
+        </div>
+        <div> 
+            <h2>Logo</h2>
+            <img src="weathericon.png" alt="weather icon">
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
+            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        </p>
+        <p class="updateline">Last updated: <span id="update"></span></p>
+    </footer>
+    <script>
+        document.getElementById('update').innerHTML = document.lastModified;
+        document.getElementById('year').innerHTML = new Date().getFullYear();
+    </script>
     
 </body>
+
 </html>
