--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan | Color Scheme</title>
+    <link rel="stylesheet" href="normalize3.css">
+    <link rel="stylesheet" href="large.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Color Scheme</h1>
+        <h2>Weather Me This</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a class="active" href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="color">
+            <h2>Color Scheme</h2>
+            <div class="color1">
+                <p>#9DFF75</p>
+            </div>
+            <div class="color2">
+                <p>#6BE871</p>
+            </div>
+            <div class="color3">
+                <p>#82FFAC</p>
+            </div>
+            <div class="color4">
+                <p>#6BE8B8</p>
+            </div>
+            <div class="color5">
+                <p>#83FFF3</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
+            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        </p>
+        <p class="updateline">Last updated: <span id="update"></span></p>
+    </footer>
+    <script>
+        document.getElementById('update').innerHTML = document.lastModified;
+        document.getElementById('year').innerHTML = new Date().getFullYear();
+    </script>
 </body>
+
 </html>
