--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,17 +24,20 @@
     </nav>
     <main>
         <div>
-            <h2>Site Name</h2>
-            <p>This site's name will be <b>Weather Me This</b>, and its domain will be <b>weathermethis.com</b> which is currently
-                available. This is an ideal domain because it is short, uses a popular ending (.com), and would only cost $12/year.</p>
+            <h2>Target Audience</h2>
+            <p>text here</p>
         </div>
         <div>
-            <h2>Site Purpose</h2>
-            <p>This website will be a great place to check the weather. This site will be used as a tool by everyone from individuals who need a quick weather update, to organizations planning events. </p>
+            <h2>Possible Scenarios</h2>
+            <p>text here</p>
+        </div>
+        <div>
+            <h2>Persona One</h2>
+            <p>text here</p>
         </div>
         <div> 
-            <h2>Logo</h2>
-            <img src="weathericon.png" alt="weather icon">
+            <h2>Persona Two</h2>
+            <p>text here</p>
         </div>
     </main>
     <footer>
