--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Color Scheme</h1>
-        <h2>Weather Me This</h2>
+        <h2>Site Plan</h2>
     </header>
     <nav>
         <ul>
