--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan | Typography</title>
+    <link rel="stylesheet" href="normalize3.css">
+    <link rel="stylesheet" href="large.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Typography</h1>
+        <h2>Site Plan</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a class="active" href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Color Scheme</h2>
+        <div class="color"></div>
+    </main>
+    <footer>
+        <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
+            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        </p>
+        <p class="updateline">Last updated: <span id="update"></span></p>
+    </footer>
+    <script>
+        document.getElementById('update').innerHTML = document.lastModified;
+        document.getElementById('year').innerHTML = new Date().getFullYear();
+    </script>
 </body>
+
 </html>
