--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -18,13 +18,13 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="target-audience.html">Target Audience</a></li>
-            <li><a class="active" href="color-scheme.html">Color Scheme</a></li>
-            <li><a href="typography.html">Typography</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a class="active" href="typography.html">Typography</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Color Scheme</h2>
-        <div class="color"></div>
+        <h2>Typography</h2>
+        <divs></div>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
