--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -25,30 +25,47 @@
     <main>
         <div>
             <h2>Target Audience</h2>
-            <p>Almost everyone is concerned with the weather; many people need to plan outdoor events and check the weather often. This site will 
-                target all those who spend time outside. Adults are more likely to check the weather than children, so they are also a target demographic.
-                Staying up to date on how the weather will turn out is also an important thing for anyone planning an event.
+            <p>Almost everyone is concerned with the weather; many people need to plan outdoor events and check the
+                weather often. This site will
+                target all those who spend time outside. Adults are more likely to check the weather than children, so
+                they are also a target demographic.
+                Staying up to date on how the weather will turn out is also an important thing for anyone planning an
+                event.
             </p>
         </div>
         <div class="grid-box">
-        <div>
-            <h2>Possible Scenarios</h2>
-            <p>1. A baseball coach needs to know if it will rain over the weekend so he'll know whether or not to cancel the game.<br>
-            2. A parent is planning a family camping trip and needs to know where and when the best weather will happen.<br>
-            3. Someone may wonder how many more days it will be before it stops snowing.<br>
-            4. A homeowner may check the weather to see if they should water their outdoor plans and lawn or not.<br>
-            5. 
-            </p>
+            <div>
+                <h2>Possible Scenarios</h2>
+                <ul>
+                    <li>
+                        <p>A baseball coach needs to know if it will rain over the weekend so he'll know whether or not
+                            to cancel the game.</p>
+                    </li>
+                    <li>
+                        <p>A parent is planning a family camping trip and needs to know where and when the best weather
+                            will happen.</p>
+                    </li>
+                    <li>
+                        <p>Someone may wonder how many more days it will be before it stops snowing.</p>
+                    </li>
+                    <li>
+                        <p>A homeowner may check the weather to see if they should water their outdoor plans and lawn or
+                            not.</p>
+                    </li>
+                    <li>
+                        <p>Gardeners may also check the weather to see if it will be a good day to plant.</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Persona One</h2>
+                <p>text here</p>
+            </div>
+            <div>
+                <h2>Persona Two</h2>
+                <p>text here</p>
+            </div>
         </div>
-        <div>
-            <h2>Persona One</h2>
-            <p>text here</p>
-        </div>
-        <div> 
-            <h2>Persona Two</h2>
-            <p>text here</p>
-        </div>
-    </div>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
@@ -60,7 +77,7 @@
         document.getElementById('update').innerHTML = document.lastModified;
         document.getElementById('year').innerHTML = new Date().getFullYear();
     </script>
-    
+
 </body>
 
 </html>
