--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -7,6 +7,7 @@
     <title>Site Plan | Target Audience</title>
     <link rel="stylesheet" href="normalize3.css">
     <link rel="stylesheet" href="large.css">
+    <link rel="stylesheet" href="medium.css">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
             </div>
             <div>
                 <h2>Persona One</h2>
-                <p>text here</p>
+                <p></p>
             </div>
             <div>
                 <h2>Persona Two</h2>
