--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -7,6 +7,7 @@
     <title>Site Plan | Typography</title>
     <link rel="stylesheet" href="normalize3.css">
     <link rel="stylesheet" href="large.css">
+    <link rel="stylesheet" href="medium.css">
 </head>
 
 <body>
