--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -58,13 +58,15 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <h2>Persona One</h2>
-                <p></p>
-            </div>
-            <div>
-                <h2>Persona Two</h2>
-                <p>text here</p>
+            <div class="personas">
+                <div>
+                    <h2>Persona One</h2>
+                    <p></p>
+                </div>
+                <div>
+                    <h2>Persona Two</h2>
+                    <p>text here</p>
+                </div>
             </div>
         </div>
     </main>
