--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -61,11 +61,19 @@
             <div class="personas">
                 <div>
                     <h2>Persona One</h2>
-                    <p></p>
+                    <p><b>Name: </b>Alice Vance</p>
+                    <p><b>Job: </b>Elementary School Teacher</p>
+                    <p><b>Age: </b>35 Years Old</p>
+                    <p><b>Technological Experiance: </b>Not very experianced</p>
+                    <p><b>Goal: </b>Check the weather to see what day would be best for the school field trip!</p>
                 </div>
                 <div>
                     <h2>Persona Two</h2>
-                    <p>text here</p>
+                    <p><b>Name: </b>Michael Newman</p>
+                    <p><b>Job: </b>Elementary School Teacher</p>
+                    <p><b>Age: </b>35 Years Old</p>
+                    <p><b>Technological Experiance: </b>Not very experianced</p>
+                    <p><b>Goal: </b>Check the weather to see what day would be best for the school field trip!</p>
                 </div>
             </div>
         </div>
