--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="normalize3.css">
     <link rel="stylesheet" href="large.css">
     <link rel="stylesheet" href="medium.css">
+    <link rel="stylesheet" href="small.css">
 </head>
 
 <body>
