--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -25,8 +25,31 @@
         </ul>
     </nav>
     <main>
-        <h2>Typography</h2>
-        <divs></div>
+        <table>
+            <tr>
+                <th>Header</th>
+                <th>Font</th>
+                <th>Size</th>
+                <th>Color</th>
+            </tr>
+            <tr>
+                <td>Site Header</td>
+                <td>Russo One</td>
+                <td>36px</td>
+                <td>black</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Taviraj</td>
+                <td>27px</td>
+                <td>black</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
