--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -30,24 +30,26 @@
                 <th>Header</th>
                 <th>Font</th>
                 <th>Size</th>
-                <th>Color</th>
             </tr>
             <tr>
-                <td>Site Header</td>
+                <td>Header 1</td>
                 <td>Russo One</td>
-                <td>36px</td>
-                <td>black</td>
+                <td>32px</td>
             </tr>
             <tr>
-                <td></td>
+                <td>Header 2</td>
                 <td>Taviraj</td>
-                <td>27px</td>
-                <td>black</td>
+                <td>24px</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Navagation Text</td>
+                <td>Neuton</td>
+                <td>19.2px</td>
+            </tr>
+            <tr>
+                <td>Paragraph Text</td>
+                <td>Neuton</td>
+                <td>18px</td>
             </tr>
         </table>
     </main>
