--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -47,6 +47,11 @@
                 <td>19.2px</td>
             </tr>
             <tr>
+                <td>Navagation Text On Hover</td>
+                <td>Neuton Bolded</td>
+                <td>19.2px</td>
+            </tr>
+            <tr>
                 <td>Paragraph Text</td>
                 <td>Neuton</td>
                 <td>18px</td>
