--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -28,19 +28,19 @@
         <h2>Color Scheme</h2>
         <div class="color">
             <div class="color1">
-                <p>#9DFF75</p>
+                <p class="colortext">#9DFF75</p>
             </div>
             <div class="color2">
-                <p>#6BE871</p>
+                <p class="colortext">#6BE871</p>
             </div>
             <div class="color3">
-                <p>#82FFAC</p>
+                <p class="colortext">#82FFAC</p>
             </div>
             <div class="color4">
-                <p>#6BE8B8</p>
+                <p class="colortext">#6BE8B8</p>
             </div>
             <div class="color5">
-                <p>#83FFF3</p>
+                <p class="colortext">#83FFF3</p>
             </div>
         </div>
     </main>
