--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -65,7 +65,7 @@
                     <p><b>Name: </b>Alice Vance</p>
                     <p><b>Job: </b>Elementary School Teacher</p>
                     <p><b>Age: </b>35 Years Old</p>
-                    <p><b>Technological Experiance: </b>Not very experianced</p>
+                    <p><b>Technological Experiance: </b>Not very experienced</p>
                     <p><b>Goal: </b>Check the weather to see what day would be best for the school field trip!</p>
                 </div>
                 <div>
@@ -73,7 +73,7 @@
                     <p><b>Name: </b>Michael Newman</p>
                     <p><b>Job: </b>Lawyer</p>
                     <p><b>Age: </b>47 Years Old</p>
-                    <p><b>Technological Experiance: </b>Adverage experiance</p>
+                    <p><b>Technological Experiance: </b>Adverage experience</p>
                     <p><b>Goal: </b>Check the weather to see if he should move the neighborhood bareque.</p>
                 </div>
             </div>
