--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -74,7 +74,7 @@
                     <p><b>Job: </b>Lawyer</p>
                     <p><b>Age: </b>47 Years Old</p>
                     <p><b>Technological Experiance: </b>Adverage experience</p>
-                    <p><b>Goal: </b>Check the weather to see if he should move the neighborhood bareque.</p>
+                    <p><b>Goal: </b>Check the weather to see if he should move the neighborhood barbeque.</p>
                 </div>
             </div>
         </div>
