lots of changes

--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan | Typography</title>
+    <meta name="description" content="Typography Site Plan for 'Weather Me This' website.">
+    <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize3.css">
     <link rel="stylesheet" href="large.css">
     <link rel="stylesheet" href="medium.css">
