--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
+    <meta name="description" content="Site Plan for 'Weather Me This' website. Portal for addtional information.">
     <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize3.css">
     <link rel="stylesheet" href="large.css">
