--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -29,7 +29,7 @@
     <main>
         <table>
             <tr>
-                <th>Header</th>
+                <th>Text Category</th>
                 <th>Font</th>
                 <th>Size</th>
             </tr>
