--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -31,18 +31,23 @@
         <div class="color">
             <div class="color1">
                 <p class="colortext">#9DFF75</p>
+                <p class="colortext">This is the site's primary color, and will be used for headers and footers.</p>
             </div>
             <div class="color2">
                 <p class="colortext">#6BE871</p>
+                <p class="colortext">This secondary color will be used for the navagation bar.</p>
             </div>
             <div class="color3">
                 <p class="colortext">#82FFAC</p>
+                <p class="colortext">This is a primary accent color.</p>
             </div>
             <div class="color4">
                 <p class="colortext">#6BE8B8</p>
+                <p class="colortext">This is a secondary accent color.</p>
             </div>
             <div class="color5">
                 <p class="colortext">#83FFF3</p>
+                <p class="colortext">This is an extra color if an addtional one becomes necessary.</p>
             </div>
         </div>
     </main>
