fixed some typos

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -35,7 +35,7 @@
             </div>
             <div class="color2">
                 <p class="colortext">#6BE871</p>
-                <p class="colortext">This secondary color will be used for the navagation bar.</p>
+                <p class="colortext">This secondary color will be used for the navigation bar.</p>
             </div>
             <div class="color3">
                 <p class="colortext">#82FFAC</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="color5">
                 <p class="colortext">#83FFF3</p>
-                <p class="colortext">This is an extra color if an addtional one becomes necessary.</p>
+                <p class="colortext">This is an extra color if an additional one becomes necessary.</p>
             </div>
         </div>
     </main>
