changes to color page

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -30,24 +30,19 @@
         <h2>Color Scheme</h2>
         <div class="color">
             <div class="color1">
-                <p class="colortext">#9DFF75</p>
-                <p class="colortext">This is the site's primary color, and will be used for headers and footers.</p>
+                <p>#9DFF75<br>This is the site's primary color, and will be used for headers and footers.</p>
             </div>
             <div class="color2">
-                <p class="colortext">#6BE871</p>
-                <p class="colortext">This secondary color will be used for the navigation bar.</p>
+                <p>#6BE871<br>This secondary color will be used for the navigation bar.</p>
             </div>
             <div class="color3">
-                <p class="colortext">#82FFAC</p>
-                <p class="colortext">This is a primary accent color.</p>
+                <p>#82FFAC<br>This is a primary accent color.</p>
             </div>
             <div class="color4">
-                <p class="colortext">#6BE8B8</p>
-                <p class="colortext">This is a secondary accent color.</p>
+                <p>#6BE8B8<br>This is a secondary accent color.</p>
             </div>
             <div class="color5">
-                <p class="colortext">#83FFF3</p>
-                <p class="colortext">This is an extra color if an additional one becomes necessary.</p>
+                <p>#83FFF3<br>This is an extra color if an additional one becomes necessary.</p>
             </div>
         </div>
     </main>
