--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="images/weathericon.png" alt="weather me this logo">
+        <img class="icon" src="images/weathericon.png" alt="weather me this logo">
         <h1>Weather Me This</h1>
         <h2>Moto Here</h2>
     </header>
