lots of changes

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -22,20 +22,24 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
     <main>
-        <h1>Preston Idaho</h1>
+        <h2>Preston Idaho</h2>
         <section class="summary">
         </section>
         
         <section class="forecast">
-            <h2>5 Day Forecast</h2>
+            <h3>5 Day Forecast</h3>
         </section>
         
         <section class="article">
-            <h2>Article</h2>
+            <h3>Article</h3>
         </section>
 
         <section class="mapcontact">
