--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -8,16 +8,18 @@
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/large.css">
-    <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
     <header>
         <img class="icon" src="images/weathericon.png" alt="weather me this logo">
-        <h1>Weather Me This</h1>
-        <h2>Moto Here</h2>
+        <div>
+            <h1>Weather Me This</h1>
+            <h2>Moto Here</h2>
+        </div>
     </header>
     <nav>
         <ul>
