--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -54,13 +54,7 @@
         </p>
         <p class="updateline">Last updated: <span id="update"></span></p>
     </footer>
-    <script>
-        document.getElementById('update').innerHTML = document.lastModified;
-        document.getElementById('year').innerHTML = new Date().getFullYear();
-        const hambutton = document.querySelector('.ham');
-        document.querySelector('navbar');
-        hambutton.addEventListener('click', () => {mainnav.classList.toggle('responsive')}, false);
-    </script>
+    <script src="navagation.js"></script>
 </body>
 
 </html>
