--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -54,7 +54,7 @@
         </p>
         <p class="updateline">Last updated: <span id="update"></span></p>
     </footer>
-    <script src="navagation.js"></script>
+    <script type="text/javascript" src="js/navagation.js"></script>
 </body>
 
 </html>
