--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -23,7 +23,7 @@
     </header>
     <nav>
         <ul class="navbar">
-            <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+            <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
