--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -35,6 +35,7 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
+            <h3>Summary</h3>
         </section>
         
         <section class="forecast">
@@ -46,6 +47,7 @@
         </section>
 
         <section class="mapcontact">
+            <h3>Contact Information</h3>
         </section>
     </main>
     <footer>
