--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -18,7 +18,7 @@
         <img class="icon" src="images/weathericon.png" alt="weather me this logo">
         <div>
             <h1>Weather Me This</h1>
-            <h2>Predicting the Weather is no Riddle</h2>
+            <h2>Predicting the Weather is No Riddle</h2>
         </div>
     </header>
     <nav>
