fixed date. so annoying

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -54,9 +54,9 @@
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
         </p>
-        <p class="updateline">Last updated: <span id="update"></span></p>
+        <p class="updateline"><span id="now"></span></p>
     </footer>
-    <script type="text/javascript" src="js/navagation.js"></script>
+    <script src="js/navagation.js"></script>
 </body>
 
 </html>
