dimmed primary color

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -30,10 +30,10 @@
         <h2>Color Scheme</h2>
         <div class="color">
             <div class="color1">
-                <p>#9DFF75<br>This is the site's primary color, and will be used for headers and footers.</p>
+                <p>#B5FF97<br>This is the site's primary color, and will be used for header.</p>
             </div>
             <div class="color2">
-                <p>#6BE871<br>This secondary color will be used for the navigation bar.</p>
+                <p>#6BE871<br>This secondary color will be used for the navigation bar and footer.</p>
             </div>
             <div class="color3">
                 <p>#82FFAC<br>This is a primary accent color.</p>
