--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joshua Fullmer</title>
     <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
+    <link rel="shortcut icon" href="favico.ico">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="medium.css">
