--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joshua Fullmer</title>
     <meta name="description" content="Assignment portal for Joshua Fullmer's WDD 230 class at BYUI">
-    <link rel="shortcut icon" href="favico.ico">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="medium.css">
@@ -24,6 +23,7 @@
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
                 <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Idaho</a></li>
+                <li>Lesson 05: <a href="lesson5/preston-4.html">Preston Idaho v2</a></li>
             </ul>
         </main> 
         <footer>
