--- a/lesson5/preston-4.html
+++ b/lesson5/preston-4.html
@@ -7,7 +7,7 @@
     <title>Preston Idaho Weather</title>
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favico.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
