--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <aside style="display: block">
+        <p>"Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</p>
+    </aside>
     <header>
         <img class="icon" src="images/weathericon.png" alt="weather me this logo">
         <div>
@@ -36,7 +39,12 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
-            <h3>Summary</h3>
+            <img>
+            <div id="weathersummary">
+                <h3>Weather Summary</h3>
+                <p>Theon bkei tak! Bwan eenow kdn a jthehsone. Coen wht ya pyyksnt Than eck. Farthow fo wenh teh coauk.</p>
+            </div>
+            
         </section>
         
         <section class="forecast">
