--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-    <aside style="display: block">
+    <aside class="banner" style="display: block">
         <p>"Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</p>
     </aside>
+    <div id="dayweek"></div>
     <header>
         <img class="icon" src="images/weathericon.png" alt="weather me this logo">
         <div>
