--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <aside class="banner" style="display: block">
+    <aside id="banner" style="display: block">
         <p>"Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</p>
     </aside>
     <div id="dayweek"></div>
