--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -16,7 +16,7 @@
 
 <body>
     <aside id="banner" style="display: block">
-        <p>"Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</p>
+        <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
     <div id="dayweek"></div>
     <header>
