--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 
-<body>
+<body onload="banner()">
     <aside id="banner" style="display: block">
         <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </aside>
@@ -64,7 +64,9 @@
         <p>&copy; <span id="year"></span> | Joshua K. Fullmer | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
         </p>
-        <p class="updateline"><span id="now"></span></p>
+        <p class="updateline">
+            <span id="now"></span>
+        </p>
     </footer>
     <script src="js/navagation.js"></script>
 </body>
