--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -39,7 +39,7 @@
     <main>
         <h2>Preston Idaho</h2>
         <section class="summary">
-            <img>
+            <img src="images/bannerweather.jpg" alt="banner waterfall image">
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Theon bkei tak! Bwan eenow kdn a jthehsone. Coen wht ya pyyksnt Than eck. Farthow fo wenh teh coauk.</p>
