--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -42,7 +42,11 @@
             <img src="images/bannerweather.jpg" alt="banner waterfall image">
             <div id="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Theon bkei tak! Bwan eenow kdn a jthehsone. Coen wht ya pyyksnt Than eck. Farthow fo wenh teh coauk.</p>
+                <p>Currently: Sunny</p>
+                <p>High: 80°F</p>
+                <p>Wind Chill: 2°F</p>
+                <p>Humidity: 43%</p>
+                <p>Wind: 2 mph</p>
             </div>
         </section>
         
