--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -72,7 +72,22 @@
         </section>
         
         <section class="article">
-            <h3>Article</h3>
+            <h3>Article By Joshua Fullmer</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing orci. Phasellus dignissim purus vel urna.<br>
+                Nam nec neque sit amet nibh egestas commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum wisi wisi, viverra eu, pellentesque eget, tincidunt eu, justo. Fusce ac risus at wisi malesuada convallis. Proin vel mauris ac lorem mattis molestie. Phasellus vel velit ut erat faucibus laoreet.<br>
+                Nam scelerisque. Pellentesque et enim nec purus euismod suscipit. Vivamus lacus lacus, faucibus vel, lobortis vel, scelerisque ac, purus. Maecenas dapibus. Fusce congue congue lorem. Aenean egestas, pede vitae rhoncus vehicula, leo libero blandit justo, quis mattis arcu orci ac mi. Vivamus urna.<br>
+                Donec odio. Nulla mollis, massa eget auctor viverra, eros lorem posuere metus, vel sodales wisi lectus et ligula. Maecenas suscipit metus sed nisl. Maecenas consectetuer purus et felis. Aliquam in tellus sit amet augue vehicula vestibulum. Fusce purus felis, suscipit eget, euismod sit amet, laoreet a, neque.<br>
+                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent arcu turpis, porttitor nec, varius vitae, blandit vel, libero. Sed mattis volutpat lacus. Etiam pellentesque placerat tortor. Ut sed nisl a velit cursus blandit. Nunc porttitor neque vel sem. Ut dui urna, tincidunt nec, lobortis id, volutpat ac, orci. Sed luctus accumsan est. Curabitur quis tellus ac elit pharetra vestibulum. Nunc semper lorem. Maecenas eget lorem. Duis dignissim dictum erat.<br>
+                Suspendisse mi. Nulla libero mauris, elementum vel, feugiat quis, malesuada eu, turpis. Maecenas libero. Quisque posuere. Donec sodales.<br>
+                Phasellus eu libero eu neque nonummy convallis. Mauris orci. Aliquam erat volutpat. Fusce varius mauris sed urna. In id nibh eget magna ultricies semper.<br>
+                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur a arcu vel magna iaculis bibendum. Aenean erat lacus, dignissim a, egestas vel, auctor ac, est. Proin gravida. Proin pretium. Pellentesque gravida eleifend leo.<br>
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed arcu. Cras quis ipsum. Nulla viverra, diam eu volutpat fringilla, risus massa lobortis purus, a vehicula felis eros ut magna. Donec bibendum, sapien vel tristique viverra, diam justo sollicitudin purus, semper pretium orci orci id tortor. Duis diam nunc, blandit quis, rutrum at, semper et, urna. Vivamus laoreet justo non nulla.<br>
+                Phasellus venenatis bibendum lectus. Morbi quam orci, interdum a, dictum ac, vestibulum sit amet, eros. Phasellus nec quam. Sed gravida fermentum erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam volutpat, lacus nec imperdiet vehicula, tellus nibh luctus libero, a varius lectus nulla quis tortor. Proin dignissim wisi a ante. Morbi nec mi semper dolor mollis mattis. Curabitur luctus eleifend purus. Nunc quis arcu. Sed vel arcu et nunc accumsan faucibus.<br>
+                Fusce id nibh. In mi. Donec tempor. Duis turpis. Vestibulum ut diam nec velit dictum eleifend. Pellentesque augue. Mauris varius tempus ante. Nulla in lectus. Nunc tristique. Praesent eu ipsum ut wisi lacinia mattis. Duis luctus elit vel dui. Proin vestibulum vulputate nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.<br>
+                Vivamus mi. Sed eu neque vitae ipsum condimentum adipiscing. Integer pulvinar adipiscing tellus. Nullam suscipit interdum mi. Sed eleifend, dolor non aliquam pharetra, pede nunc semper mi, nec rhoncus mi est eu ante. In vestibulum. Ut ut ante vel tellus malesuada imperdiet. Suspendisse id orci. Suspendisse lacinia, est a pretium rutrum, nibh elit commodo ligula, id luctus velit elit quis massa. Nulla diam. Nulla sit amet libero. Maecenas adipiscing imperdiet justo. Maecenas justo purus, malesuada vitae, volutpat nec, dignissim vel, ligula.<br>
+            </p>
+            <img src="images/blossom-flowers.jpg" alt="blossoms">
         </section>
 
         <section class="mapcontact">
